# stripe

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  cabal.project  default.nix  shell.nix
stripe-core/: LICENSE  stripe-core.cabal
stripe-core/src/Web/Stripe/: ApplicationFeeRefund.hs  Balance.hs  Card.hs  Charge.hs  Client.hs  Coupon.hs  Customer.hs  Dispute.hs  Event.hs  Invoice.hs  InvoiceItem.hs  Plan.hs  Recipient.hs  Refund.hs  StripeRequest.hs  Subscription.hs  SubscriptionItem.hs  Transfer.hs  Types.hs  Util.hs
stripe-core/src/Web/Stripe/StripeRequest/: Class.hs
stripe-core/src/Web/Stripe/Types/: Balance.hs  BankAccount.hs  Card.hs  Charge.hs  CollectionMethod.hs  Country.hs  Coupon.hs  Currency.hs  Customer.hs  Date.hs  Description.hs  Dispute.hs  Email.hs  Event.hs  Invoice.hs  InvoiceItem.hs  MetaData.hs  Metadata.hs  Name.hs  Plan.hs  Quantity.hs  Recipient.hs  Refund.hs  Source.hs  StatementDescriptor.hs  StripeList.hs  StripeTime.hs  Subscription.hs  SubscriptionItem.hs  TaxID.hs  TaxRate.hs  TimeRange.hs  Token.hs  Transaction.hs  Transfer.hs  Util.hs
stripe-http-client/: LICENSE  stripe-http-client.cabal
stripe-http-client/src/Web/Stripe/Client/: HttpClient.hs
stripe-http-client/tests/: Main.hs
stripe-tests/: stripe-tests.cabal
stripe-tests/tests/Web/Stripe/Test/: AllTests.hs  Card.hs  Charge.hs  Coupon.hs  Customer.hs  Discount.hs  Dispute.hs  Invoice.hs  InvoiceItem.hs  Plan.hs  Recipient.hs  Refund.hs  Subscription.hs  SubscriptionItem.hs  Token.hs  Transfer.hs  Util.hs
